--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 
     <head>
         <meta charset = "UTF-8">
-        <link rel = 'stylesheet' href = 'assets/css/bootstrap.css'>
-        <link rel = 'stylesheet' href = 'assets/css/style.css'>
+        <link rel = 'stylesheet' href = '../assets/css/bootstrap.css'>
+        <link rel = 'stylesheet' href = '../assets/css/style.css'>
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin=""/>
@@ -51,8 +51,8 @@
    crossorigin=""></script>
 
           <!-- API key -->
-          <script type="text/javascript" src="assets/js/config.js"></script>
-          <script type="text/javascript" src="assets/js/dra.js"></script>
+          <script type="text/javascript" src="../assets/js/config.js"></script>
+          <script type="text/javascript" src="../assets/js/dra.js"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     </body>
